--- a/css/style.css
+++ b/css/style.css
@@ -207,3 +207,66 @@ header{
 .category p{
     font-size: 0.90rem;
 }
+
+
+/* POPULAR COURSES STYLE */
+.courses{
+    margin-top: 10rem;
+}
+.courses-cont{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+}
+.course{
+    background: var(--color-bg1);
+    text-align: center;
+    border: 1px solid transparent;
+    transition: var(--transition);
+}
+.course:hover{
+    background: transparent;
+    border-color: var(--color-primary);
+}
+.course-info{
+    padding: 2rem;
+}
+.course-info p{
+    margin: 1.2rem 0 2rem;
+    font-size: 0.9rem;
+}
+.faqs{
+    background: var(--color-bg1);
+    box-shadow: inset 0 0 3rem  rgba(0,0,0,0.5);
+}
+.faqs-cont{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap:1rem;
+}
+.faq{
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    gap: 1.4rem;
+    height: fit-content;
+    background: var(--color-primary);
+    cursor: pointer;
+}
+.faq h4{
+    font-size: 1rem;
+    line-height: 2.2;
+}
+.faq-icon{
+    align-self: flex-start;
+    font-size: 1.2rem;
+}
+.faq p{
+    margin-top: 0.8rem;
+    display: none;
+
+}
+/* we use javascript to toggle to this class */
+.faq.open p{
+display: block;
+}
