--- a/css/style.css
+++ b/css/style.css
@@ -270,3 +270,45 @@ header{
 .faq.open p{
 display: block;
 }
+
+/* reviw stylw */
+.review-cont{
+    overflow-x: hidden;
+    position: relative;
+    margin-bottom: 5rem;
+}
+.review{
+    padding-top: 2rem;
+}
+.student-img{
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto 1rem;
+    border: 5px solid var(--color-bg1);
+}
+.review-info{
+    text-align: center;
+}
+.review-content{
+    background: var(--color-primary);
+    padding: 2rem;
+    margin-top: 3rem;
+    position: relative;
+}
+.review-content::before{
+    content: "";
+    display: block;
+    background: linear-gradient(135deg,transparent,
+    var(--color-primary),
+    var(--color-primary)
+    );
+    width: 3rem;
+    height: 3rem;
+    position:absolute;
+    left: 44%;
+    /* the half of the height that what is going to give you the top */
+    top: -1.5rem;
+    transform: rotate(45deg);
+}
