--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ display: block;
 .footer-copyright {
   
      text-align: center;
-    margin-top: 1rem;
+    margin-bottom: 0;
     padding: 1.2rem 0;
     border-top: 1px solid var(--color-bg2);
 }
